Implementazioni flusso pizza manager

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
+#SERVER
+server.port=8080
+server.servlet.context-path=/awesome
+
 spring.application.name=Pizza orders manager
+
+#DB
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.url=jdbc:h2:mem:awesome-db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=false
+
+#LOG
+logging.level.root=INFO
+logging.level.com.awesome.pizza=DEBUG
+
+#OPENAPI
+springdoc.api-docs.path=/v3/api-docs
+springdoc.packages-to-scan=com.awesome.pizza.order.manager.controller
+
+#JACKSON
+spring.jackson.default-property-inclusion=non_null
